<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/ll_bg">
    <TextView 
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/sacn_dialog_title"/>
    <TextView
        android:id="@+id/tv_url" 
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:text="@string/scan_url"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"/>
    <View 
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/devide_line"/>
    <LinearLayout
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_cancle"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/whites"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:text="@string/cancle"
            android:gravity="center"/>
        <View 
            android:layout_height="match_parent"
            android:layout_width="0.5dp"
            android:background="@color/devide_line"/>
        <Button 
            android:id="@+id/btn_sure"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/whites"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:text="@string/sure"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
