<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:alpha="0.8">
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <TextView 
            android:id="@+id/two_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:text="@string/camera_address"
            android:textStyle="bold"/>
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:text="@string/camera_tep"
                android:layout_marginLeft="20sp"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/camera_pm"/>
        </RelativeLayout>
        <View 
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/camera_day_hour"/>
    </LinearLayout>

</RelativeLayout>
