<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <com.qq.sort.ClearEditText
        android:id="@+id/filter_edit"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dip"
        android:background="@drawable/acm_inputbox"
        android:drawableLeft="@drawable/search"
        android:hint="@string/search"
        android:singleLine="true"
        android:textSize="15.0dip"
        android:paddingLeft="5dp" />

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/filter_edit"
        android:background="@color/whites"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/rl_tonxunru"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/add_contacts_look_for_similarity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tv_newfriend" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_group"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/qq_contact_list_phone_enter_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_group"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tv_tongxunlu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_discuss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_discuss"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/qq_contact_list_troop_entry_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_discuss"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tv_group" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_life"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_life"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/qq_contact_list_pbaccount_entry_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_life"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tv_life" />
        </RelativeLayout>
    </LinearLayout>
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tv_friend"
        android:layout_below="@id/ll_center"/>

</RelativeLayout>