<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.qq.view.TitleBarView 
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView 
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_country"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View 
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText 
            android:id="@+id/et_phoneNumber"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_phoneNumber_hint"
            android:background="@android:color/white"
            android:inputType="phone"
            android:padding="5dp"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_next"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/btn_next"
        android:textSize="18sp"
        android:background="@drawable/acm_inputbox"/>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <CheckBox 
            android:id="@+id/ck_agreen"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/checkbox"
            android:button="@null"
            android:checked="true"/>
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_xieyi"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>
        <com.qq.view.TextURLView 
            android:id="@+id/tv_url"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>
