<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/ll_buttom"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_alignParentBottom="true">
        <TextView 
            android:id="@+id/cancle"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/whites"
            android:textSize="24sp"
            android:text="@string/cancle"
            android:layout_marginLeft="20dp"/>
        <TextView 
            android:id="@+id/sure"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/whites"
            android:textSize="24sp"
            android:text="@string/sure"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/ll_title"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:background="@color/black">
        <TextView 
            android:id="@+id/tiaozheng"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:textColor="@color/whites"
            android:textSize="20sp"
            android:text="@string/tiaozheng"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <ImageView 
            android:id="@+id/xuanzhuang"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            android:src="@drawable/toolbar"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_water"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/ll_buttom"
        android:layout_below="@id/ll_title">
    <ImageView 
        android:id="@+id/water_photo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"/>
    <com.qq.view.WaterView 
        android:id="@+id/waterView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>
    </RelativeLayout>

</RelativeLayout>
