<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/button_details_gohome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/camera_water"
            android:textColor="@color/whites"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout 
        android:id="@+id/camera_buttom"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="#000000">
        <ImageView 
            android:id="@+id/camera_sd"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/zebra_ic_album"/>
        <ImageView 
            android:id="@+id/tack_pic"
            android:layout_height="70dp"
            android:layout_width="70dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            android:src="@drawable/zebra_ic_bt_normal"
            android:layout_centerInParent="true"/>
        <TextView 
            android:id="@+id/camera_more"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/whites"
            android:textSize="20sp"
            android:text="@string/camera_more"/>
    </RelativeLayout>
    
    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/camera_buttom"
        android:layout_below="@id/ll_title"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_height="130dp"
        android:layout_width="match_parent"
        android:layout_above="@id/camera_buttom"/>

</RelativeLayout>